--- a/po/el.po
+++ b/po/el.po
@@ -9,10 +9,10 @@ msgstr ""
 "Project-Id-Version: gegl master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=gegl&k"
 "eywords=I18N+L10N&component=general\n"
-"POT-Creation-Date: 2015-06-19 05:25+0000\n"
-"PO-Revision-Date: 2015-06-22 10:25+0300\n"
+"POT-Creation-Date: 2015-07-27 05:28+0000\n"
+"PO-Revision-Date: 2015-07-28 12:11+0300\n"
 "Last-Translator: Dimitris Spingos (Δημήτρης Σπίγγος) <dmtrs32@gmail.com>\n"
-"Language-Team: team@lists.gnome.gr\n"
+"Language-Team: www.gnome.gr\n"
 "Language: el\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -633,11 +633,6 @@ msgid "Bump Map"
 msgstr "Απεικόνιση ανάγλυφου"
 
 #: ../operations/common/bump-map.c:456
-#| msgid ""
-#| "This plug-in uses the algorithm described by John Schlag, \"Fast "
-#| "Embossing Effects on Raster Image Data\" in Graphics GEMS IV (ISBN "
-#| "0-12-336155-9). It takes a drawable to be applied as a bump map to "
-#| "another image and produces a nice embossing effect."
 msgid ""
 "This plug-in uses the algorithm described by John Schlag, \"Fast Embossing "
 "Effects on Raster Image Data\" in Graphics GEMS IV (ISBN 0-12-336155-9). It "
@@ -957,11 +952,11 @@ msgstr "Κατώφλι γαλάζιου"
 msgid "Blue threshold of the input color"
 msgstr "Κατώφλι γαλάζιου του χρώματος εισαγωγής"
 
-#: ../operations/common/color-exchange.c:192
+#: ../operations/common/color-exchange.c:243
 msgid "Exchange color"
 msgstr "Ανταλλαγή χρώματος"
 
-#: ../operations/common/color-exchange.c:195
+#: ../operations/common/color-exchange.c:246
 msgid ""
 "Exchange one color with another, optionally setting a threshold to convert "
 "from one shade to another."
@@ -1578,17 +1573,14 @@ msgid "Generate diffraction patterns"
 msgstr "Δημιουργία μοτίβων διάθλασης"
 
 #: ../operations/common/displace.c:28
-#| msgid "Cartoon"
 msgid "Cartesian"
 msgstr "Καρτεσιανές"
 
 #: ../operations/common/displace.c:29
-#| msgid "To polar"
 msgid "Polar"
 msgstr "Πολικές"
 
 #: ../operations/common/displace.c:32
-#| msgid "Replacement color."
 msgid "Displacement mode"
 msgstr "Κατάσταση μετατόπισης"
 
@@ -1638,12 +1630,10 @@ msgstr ""
 "Μετατόπιση πολλαπλασιαστή για το Υ ή σε εφαπτομενική κατεύθυνση (μοίρες)"
 
 #: ../operations/common/displace.c:374
-#| msgid "Laplace"
 msgid "Displace"
 msgstr "Λαπλάς"
 
 #: ../operations/common/displace.c:377
-#| msgid "Displace pixels in a ripple pattern"
 msgid "Displace pixels as indicated by displacement maps"
 msgstr ""
 "Μετατόπιση εικονοστοιχείων όπως υποδεικνύεται από τις απεικονίσεις "
@@ -2306,7 +2296,7 @@ msgid "Should the output extent be clipped to the input extent"
 msgstr "Αν θα πρέπει η έκταση εξόδου να περικοπεί στην έκταση εισόδου"
 
 #: ../operations/common/gaussian-blur-iir.c:118
-#: ../operations/common/gblur-1d.c:888
+#: ../operations/common/gblur-1d.c:891
 msgid ""
 "Performs an averaging of neighboring pixels with the normal distribution as "
 "weighting"
@@ -2433,11 +2423,11 @@ msgstr "Τύπος αυταπάτης"
 msgid "Type of illusion"
 msgstr "Τύπος αυταπάτης"
 
-#: ../operations/common/illusion.c:243
+#: ../operations/common/illusion.c:244
 msgid "Illusion"
 msgstr "Aυταπάτη"
 
-#: ../operations/common/illusion.c:246
+#: ../operations/common/illusion.c:247
 msgid "Superimpose many altered copies of the image."
 msgstr "Υπέρθεση πολλών εναλλακτικών αντιγράφων της εικόνας."
 
@@ -4278,9 +4268,6 @@ msgid "Value Invert"
 msgstr "Αντιστροφή τιμής"
 
 #: ../operations/common/value-invert.c:150
-#| msgid ""
-#| "Inverts just the value component, the result is the corresponding "
-#| "`inverted' image."
 msgid ""
 "Inverts just the value component, the result is the corresponding 'inverted' "
 "image."
@@ -4676,7 +4663,6 @@ msgid "Top"
 msgstr "Επάνω"
 
 #: ../operations/common/wind.c:36
-#| msgid "Bottom-left"
 msgid "Bottom"
 msgstr "Κάτω"
 
@@ -4689,7 +4675,6 @@ msgid "Leading"
 msgstr "Αρχή"
 
 #: ../operations/common/wind.c:42
-#| msgid "Scaling"
 msgid "Trailing"
 msgstr "Τέλος"
 
@@ -4698,7 +4683,6 @@ msgid "Style"
 msgstr "Τεχνοτροπία"
 
 #: ../operations/common/wind.c:48
-#| msgid "Scale, strength of effect"
 msgid "Style of effect"
 msgstr "Τεχνοτροπία του εφέ"
 
@@ -4711,7 +4695,6 @@ msgid "Edge Affected"
 msgstr "Επηρεαζόμενη άκρη"
 
 #: ../operations/common/wind.c:58
-#| msgid "Border behavior"
 msgid "Edge behavior"
 msgstr "Συμπεριφορά άκρης"
 
@@ -5152,7 +5135,6 @@ msgid "NPY image saver (Numerical python file saver.)"
 msgstr "Αποθήκευση εικόνας NPY (αποθήκευση αρχείου αριθμητικού python.)"
 
 #: ../operations/external/raw-load.c:238
-#| msgid "WebP File Loader"
 msgid "libraw File Loader"
 msgstr "Φορτωτής αρχείου libraw"
 
@@ -5774,16 +5756,17 @@ msgid "Porter Duff operation xor (d = cA * (1.0f - aB)+ cB * (1.0f - aA))"
 msgstr "Πράξη Porter Duff xor (d = cA * (1.0f - aB)+ cB * (1.0f - aA))"
 
 #: ../operations/seamless-clone/seamless-clone.c:22
-#: ../operations/seamless-clone/seamless-clone-compose.c:21
-msgid "Refinement steps"
-msgstr "Βήματα εξευγενισμού"
+#| msgid "Refinement steps"
+msgid "Refinement scale"
+msgstr "Κλίμακα βελτίωσης"
 
 #: ../operations/seamless-clone/seamless-clone.c:23
-#: ../operations/seamless-clone/seamless-clone-compose.c:22
+#| msgid ""
+#| "Maximal amount of refinement points to be used for the interpolation mesh"
 msgid ""
-"Maximal amount of refinement points to be used for the interpolation mesh"
+"Maximal scale of refinement points to be used for the interpolation mesh"
 msgstr ""
-"Μέγιστη ποσότητα σημείων εξευγενισμού που θα χρησιμοποιηθούν για το πλέγμα "
+"Μέγιστη κλίμακα σημείων βελτίωσης που θα χρησιμοποιηθούν για το πλέγμα "
 "παρεμβολής"
 
 #: ../operations/seamless-clone/seamless-clone.c:27
@@ -5802,21 +5785,32 @@ msgstr "Μήνυμα σφάλματος"
 msgid "An error message in case of a failure"
 msgstr "Ένα μήνυμα σφάλματος σε περίπτωση αποτυχίας"
 
-#: ../operations/seamless-clone/seamless-clone.c:171
+#: ../operations/seamless-clone/seamless-clone.c:182
 msgid "The foreground does not contain opaque parts"
 msgstr "Το προσκήνιο δεν περιέχει αδιαφανή τμήματα"
 
-#: ../operations/seamless-clone/seamless-clone.c:174
+#: ../operations/seamless-clone/seamless-clone.c:185
 msgid "The foreground is too small to use"
 msgstr "Το προσκήνιο είναι υπερβολικά μικρό για να χρησιμοποιηθεί"
 
-#: ../operations/seamless-clone/seamless-clone.c:177
+#: ../operations/seamless-clone/seamless-clone.c:188
 msgid "The foreground contains holes and/or several unconnected parts"
 msgstr "Το προσκήνιο περιέχει οπές και/ή αρκετά ασύνδετα μέρη"
 
-#: ../operations/seamless-clone/seamless-clone.c:188
+#: ../operations/seamless-clone/seamless-clone.c:199
 msgid "The opaque parts of the foreground are not above the background!"
 msgstr "Τα αδιαφανή μέρη του προσκηνίου δεν είναι πάνω από το παρασκήνιο!"
+
+#: ../operations/seamless-clone/seamless-clone-compose.c:21
+msgid "Refinement steps"
+msgstr "Βήματα βελτίωσης"
+
+#: ../operations/seamless-clone/seamless-clone-compose.c:22
+msgid ""
+"Maximal amount of refinement points to be used for the interpolation mesh"
+msgstr ""
+"Μέγιστη ποσότητα σημείων βελτίωσης που θα χρησιμοποιηθούν για το πλέγμα "
+"παρεμβολής"
 
 #: ../operations/seamless-clone/seamless-clone-compose.c:32
 msgid "How much vertical offset should applied to the paste"
@@ -5943,32 +5937,26 @@ msgid "RGB Red"
 msgstr "Κόκκινο RGB"
 
 #: ../operations/workshop/component-extract.c:26
-#| msgid "Green"
 msgid "RGB Green"
 msgstr "Πράσινο RGB"
 
 #: ../operations/workshop/component-extract.c:27
-#| msgid "Blue"
 msgid "RGB Blue"
 msgstr "Γαλάζιο RGB"
 
 #: ../operations/workshop/component-extract.c:29
-#| msgid "Saturation"
 msgid "HSV Saturation"
 msgstr "Κορεσμός HSV"
 
 #: ../operations/workshop/component-extract.c:30
-#| msgid "Value"
 msgid "HSV Value"
 msgstr "Τιμή HSV"
 
 #: ../operations/workshop/component-extract.c:31
-#| msgid "Saturation"
 msgid "HSL Saturation"
 msgstr "Κορεσμός HSL"
 
 #: ../operations/workshop/component-extract.c:32
-#| msgid "Lightness"
 msgid "HSL Lightness"
 msgstr "Φωτεινότητα HSL"
 
@@ -6013,27 +6001,22 @@ msgid "LAB B"
 msgstr "LAB B"
 
 #: ../operations/workshop/component-extract.c:46
-#| msgid "Compensate"
 msgid "Component"
 msgstr "Στοιχείο"
 
 #: ../operations/workshop/component-extract.c:49
-#| msgid "Component 1 frequency"
 msgid "Component to extract"
 msgstr "Συστατικό για εξαγωγή"
 
 #: ../operations/workshop/component-extract.c:51
-#| msgid "Keep component 1"
 msgid "Invert component"
 msgstr "Αντιστροφή στοιχείου"
 
 #: ../operations/workshop/component-extract.c:52
-#| msgid "number of levels per component"
 msgid "Invert the extracted component"
 msgstr "Αντιστροφή των εξαχθέντος συστατικού"
 
 #: ../operations/workshop/component-extract.c:54
-#| msgid "Low output"
 msgid "Linear output"
 msgstr "Γραμμική έξοδος"
 
@@ -6042,7 +6025,6 @@ msgid "Use linear output instead of gamma corrected"
 msgstr "Χρήση της γραμμικής εξόδου αντί για τη διορθωμένη γάμα"
 
 #: ../operations/workshop/component-extract.c:264
-#| msgid "Exponent"
 msgid "Extract Component"
 msgstr "Εξαγωγή συστατικού"
 
@@ -6635,12 +6617,10 @@ msgid "Mandelbrot set renderer"
 msgstr "Απόδοση συνόλου Mandelbrot"
 
 #: ../operations/workshop/median-blur.c:408
-#| msgid "Gaussian Blur"
 msgid "Median Blur"
 msgstr "Μέση θόλωση"
 
 #: ../operations/workshop/median-blur.c:410
-#| msgid "Blur resulting from averaging the colors of a square neighbourhood."
 msgid ""
 "Blur resulting from computing the median color of in a square neighbourhood."
 msgstr ""
