AUTHORS: add some new contributors

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@ Calvin Williamson, Caroline Dahloff, Manish Singh, Jay Cox Daniel Rogers, Sven
 Neumann, Michael Natterer, Øyvind Kolås, Philip Lafleur, Dominik Ernst, Richard
 Kralovic, Kevin Cozens, Victor Bogado, Martin Nordholts, Geert Jordaens,
 Michael Schumacher, John Marshall, Étienne Bersac, Mark Probst, Håkon Hitland,
-Tor Lillqvist, Hans Breuer, Deji Akingunola and Bradley Broom, Hans Petter
+Tor Lillqvist, Hans Breuer, Deji Akingunola, Bradley Broom, Hans Petter
 Jansson, Jan Heller, dmacks@netscpace.org, Sven Anders, Hubert Figuière, Sam
 Hocevar, yahvuu at gmail.com, Nicolas Robidoux, Ruben Vermeersch, Gary V.
 Vaughan, James Legg, Henrik Åkesson, Fryderyk Dziarmagowski, Ozan Caglayan,
@@ -15,7 +15,7 @@ Magnusson, Patrick Horgan, Tobias Ellinghaus, Rasmus Hahn, Chantal Racette,
 John Cupitt, Anthony Thyssen, Emilio Pozuelo Monfort, Robert Sasu, Massimo 
 Valentini, Hans Lo, Zbigniew Chyla, David Evans, Javier Jardón, Matteo F.
 Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk, Felix Ulber,
-Daniel Sabo, Téo Mazars and Sven Claussner.
+Daniel Sabo, Téo Mazars, Sven Claussner, Akazh Akya and Laura Ekstrand.
 
 Documentation:
 ^^^^^^^^^^^^^^
