updates to NEWS and AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,26 +1,29 @@
-Code:
-^^^^^
-Calvin Williamson, Caroline Dahloff, Manish Singh, Jay Cox Daniel Rogers, Sven
-Neumann, Michael Natterer, Øyvind Kolås, Philip Lafleur, Dominik Ernst, Richard
-Kralovic, Kevin Cozens, Victor Bogado, Martin Nordholts, Geert Jordaens,
-Michael Schumacher, John Marshall, Étienne Bersac, Mark Probst, Håkon Hitland,
-Tor Lillqvist, Hans Breuer, Deji Akingunola, Bradley Broom, Hans Petter
-Jansson, Jan Heller, dmacks@netscpace.org, Sven Anders, Hubert Figuière, Sam
-Hocevar, yahvuu at gmail.com, Nicolas Robidoux, Ruben Vermeersch, Gary V.
-Vaughan, James Legg, Henrik Åkesson, Fryderyk Dziarmagowski, Ozan Caglayan,
-Tobias Mueller, Nils Philippsen, Adam Turcotte, Danny Robson, Javier Jardón and
-Yakkov Selkowitz, Kaja Liiv, Eric Daoust, Damien de Lemeny, Fabian Groffen,
-Vincent Untz, Debarshi Ray, Stuart Axon, Kao, Barak Itkin, Michael Muré, Mikael
-Magnusson, Patrick Horgan, Tobias Ellinghaus, Rasmus Hahn, Chantal Racette,
-John Cupitt, Anthony Thyssen, Emilio Pozuelo Monfort, Robert Sasu, Massimo 
-Valentini, Hans Lo, Zbigniew Chyla, David Evans, Javier Jardón, Matteo F.
-Vescovi, Jan Rüegg, Zhang Peixuan, Michael Henning, Ville Sokk, Felix Ulber,
-Daniel Sabo, Téo Mazars, Sven Claussner, Akazh Akya and Laura Ekstrand.
-
-Documentation:
-^^^^^^^^^^^^^^
-Garry R. Osgood, Øyvind Kolås, Kevin Cozens and Shlomi Fish.
-
-Artwork:
-^^^^^^^^
-Jakub Steiner, Øyvind Kolås, Tonda Tavalec
+Adam Turcotte, Albert F, Alexandre Prokoudine, Alexia Death, Anders Jonsson,
+Andika Triwidada, Andreas Fischer, André Tupinambá, Andy Gill, Angh, Audrey
+Mandet, Barak Itkin, Bruce Cowan, Carlos Zubieta, Calvin Williamson, Caroline
+Dahloff, Chris Leonard, Christian Kirbach, Claude Paroz, Clayton Walker, Cédric
+Valmary, Damien de Lemeny, Daniel Mustieles, Daniel Nylander, Daniel Rogers,
+Daniel Sabo, Danny Robson, David Evans, Debarshi Ray, Denis Knoepfle, Dimitris
+Papavasiliou, Dimitris Spingos, Djavan Fagundes, Dov Grobgeld, Elle Stone,
+Emilio Pozuelo Monfort, Enrico Nicoletto, Felix Ulber, Florian Klemme, Fran
+Diéguez, Francisco Vila, Fryderyk Dziarmagowski, Gabriel Burt, Garry R. Osgood,
+Georges Basile Stavracas Neto, Hans Breuer, Hans Lo, Hans Petter Jansson,
+Harald Korneliussen, Hartmut Kuhse, Henrik Akesson, Hubert Figuiere, Inaki
+Larranaga Murgoitio, Isaac Wagner, Jakub Steiner, James Legg, Jan Rüegg, Jan
+Vesely, Javier Jardón, Jay Cox, Jehan, Joao S. O. Bueno, Jon Nordby, Jordi Mas,
+João S. O. Bueno, Kalev Lember, Kao, Kevin Cozens, Kristjan SCHMIDT, Manish
+Singh, Marco Ciampa, Marek Dvoroznak, Maria  Mavridou, Martijn van Beers,
+Martin Blanchard, Martin Nordholts, Martin Srebotnjak, Massimo Valentini, Matej
+Urbančič, Maxime Nicco, Michael Henning, Michael Muré, Michael Natterer,
+Michael Schumacher, Mikael Magnusson, Miroslav Talasek, Muhammet Kara, Mukund
+Sivaraman, Nanley Chery, Necdet Yücel, Nicolas Robidoux, Nils Philippsen, Norm
+Murray, Ozan Caglayan, Pascal Giessler, Patrick Horgan, Pedro Albuquerque,
+Philip Lafleur, Piotr Drąg, Quentin Glidic, RPG, Rafael Ferreira, Rasmus,
+Robert Sasu, Roman Lebedev, Ruben Vermeersch, Rūdolfs Mazurs, Sam Hocevar,
+Samir Ribic, Samuel Pitoiset, Shlomi Fish, Simon Budig, Stuart Axon, Sven
+Claussner, Sven Neumann, Thomas Manni, Tim Lunn, Ting-Wei Lan, Tobias
+Ellinghaus, Tobias Mueller, Tom Stellard, Tor Lillqvist, Téo Mazars, Téo
+Mazars, Ulf-D. Ehlert, Vadim Rutkovsky, Victor Oliveira, Ville Sokk, Vilson
+Vieira, Vincent Untz, Yaakov Selkowitz, Yongjia Zhang, Zbigniew Chyla, Zhang
+Peixuan, akash akya, awaw fumin, jaycox, nick black, sebul, Étienne BERSAC,
+Étienne Bersac, Øyvind Kolås and 周 周
