NEWS: throw in another comma

--- a/NEWS
+++ b/NEWS
@@ -19,7 +19,7 @@ Changes in GEGL 0.3.2
 Contributions from:
 
  Alexandre Prokoudine, André Tupinambá, Claude Paroz, Daniel Mustieles,
- Debarshi Ray  Dimitris Spingos, Elle Stone, Jehan, Jordi Mas, Marco Ciampa,
+ Debarshi Ray, Dimitris Spingos, Elle Stone, Jehan, Jordi Mas, Marco Ciampa,
  Martin Blanchard, Martin Srebotnjak, Massimo Valentini, Michael Henning,
  Michael Natterer, Necdet Yücel, Pedro Albuquerque, Piotr Drąg, Roman Lebedev,
  Thomas Manni, Vilson Vieira, akash akya and Øyvind Kolås.
