--- a/NEWS
+++ b/NEWS
@@ -22,7 +22,7 @@ Contributions from:
  Debarshi Ray, Dimitris Spingos, Elle Stone, Jehan, Jordi Mas, Marco Ciampa,
  Martin Blanchard, Martin Srebotnjak, Massimo Valentini, Michael Henning,
  Michael Natterer, Necdet Yücel, Pedro Albuquerque, Piotr Drąg, Roman Lebedev,
- Thomas Manni, Vilson Vieira, akash akya and Øyvind Kolås.
+ Sven Neummann, Thomas Manni, Vilson Vieira, akash akya and Øyvind Kolås.
 
 
 
