--- a/NEWS
+++ b/NEWS
@@ -21,7 +21,7 @@ Contributions from:
 
  Øyvind Kolås, Thomas Manni Michael Natterer, Nils Philippsen, Debarshi Ray,
 Martin Blanchard, Justin Lecher, Massimo Valentini, Mukund Sivaraman, Alexandre
-Prokoudine,
+Prokoudine, Piotr Drąg 
 
 
 Changes in GEGL 0.3.4
